--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body
         {
-            background-color: beige;
+            background-color: lightgray;
         }
     </style>
 </head>
