Feat : Added Head and Footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     </style>
 </head>
 <body>
-    
+    <h1>
+        PASSIONATE ABOUT LEARNING NEW SKILL
+    </h1>
+    <footer>
+        <p>Follow me on:</p>
+        <ul>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">LinkedIn</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
