--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RUPESH-PORTFOLIO</title>
     <style>
-        body
+        h1
         {
-            background-color: lightgray;
+            background-color: #666;
+            color:white;
+            text-align: center;
+            padding: 20px;
+        }
+        footer
+        {
+            background-color: #666;
+            color:white;
+            text-align: center;
+            padding: 20px;
         }
     </style>
 </head>
