--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RUPESH-PORTFOLIO</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         section::after {
             content: "";
             display: table;
