--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             background-color: #666;
             color: white;
             padding: 20px;
-            text-decoration: none;
         }
 
         article {
@@ -36,11 +35,13 @@
             padding: 20px;
             width: 70%;
             background-color: #f1f1f1;
+            height: 400px;
         }
 
         nav {
             float: left;
             width: 30%;
+            height: 400px;
             background: #ccc;
             padding: 20px;
         }
